--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -2,7 +2,8 @@ name: CI-CD
 
 on:
   push:
-    branches: main
+    branches:
+     - development
 
 jobs:
   build-js:
@@ -50,8 +51,26 @@ jobs:
         with:
           php-version: 7.3
           extension-csv: mbstring, bcmath
-      - name: Composer install
-        run: composer install
+
+       - name: Validate composer.json and composer.lock
+         run: composer validate
+
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v2
+        with:
+          path: vendor
+          key: ${{ runner.os }}-node-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Update dependencies
+        run: composer update
+
+      - name: Install dependencies
+        run:  composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+
+
       - name: Setup Deployer
         uses: atymic/deployer-php-action@master
         with:
@@ -61,3 +80,27 @@ jobs:
         env:
           DOT_ENV: ${{ secrets.DOT_ENV }}
         run: dep deploy production --tag=${{ env.GITHUB_REF }} -vvv
+
+
+      - name: cache clear
+        uses: actions/cache@v3
+        with:
+          command: |
+            cd /var/www/html/php/
+            php artisan cache:clear
+            php artisan config:clear
+            php artisan config:cache
+
+      - name: permission
+        with:
+          command: |
+            cd /public/
+            sudo chmod -R 777 .
+            cd ..
+            cd /bootstrap/
+            sudo chmod -R 777 .
+            cd ..
+            cd /storage/
+            sudo chmod -R 777 .
+            cd ..
+
