--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -63,10 +63,13 @@ jobs:
         run: dep deploy production --tag=${{ env.GITHUB_REF }} -vvv
 
 
+        - name: Clear Cache via SSH
+        uses: garygrossgarten/github-action-ssh@release
         with:
           command: |
-            cd /var/www/html/php/public
-            sudo chmod -R 777 .
-            cd /var/www/html/php/storage
-            sudo chmod -R 777 .
+            cd /home/devparkk/public_html
+            php artisan cache:clear
+            php artisan config:clear
+            php artisan config:cache
+
 
