--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -2,7 +2,7 @@ name: CI-CD
 
 on:
   push:
-    branches: main
+    branches: development
 
 jobs:
   build-js:
@@ -39,7 +39,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [build-js, test-php]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v1
       - name: Download build assets
