--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -9,14 +9,15 @@ jobs:
     name: Build Js/Css
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Yarn Build
-        run: |
-          yarn install
-          yarn prod
-          cat public/mix-manifest.json # See asset versions in log
-      - name: Directory permition
-        run: chmod -R 777 storage bootstrap
+    - uses: actions/checkout@v2
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
       - name: Upload build files
         uses: actions/upload-artifact@v1
         with:
