--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -2,19 +2,22 @@ name: CI-CD
 
 on:
   push:
-    branches: main
+    branches: development
 
 jobs:
   build-js:
     name: Build Js/Css
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Yarn Build
-        run: |
-          yarn install
-          yarn prod
-          cat public/mix-manifest.json # See asset versions in log
+    - uses: actions/checkout@v1
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
       - name: Upload build files
         uses: actions/upload-artifact@v1
         with:
@@ -37,7 +40,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [build-js, test-php]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v1
       - name: Download build assets
