--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -10,9 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-      run: php artisan key:generate
     - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      run: sudo chmod -R 777 storage bootstrap/cache
     - name: Upload build files
       uses: actions/upload-artifact@v1
       with:
