--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -2,21 +2,25 @@ name: CI-CD
 
 on:
   push:
-    branches: development
+    branches: main
 
 jobs:
   build-js:
     name: Build Js/Css
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      - uses: actions/checkout@v1
+      - name: Yarn Build
+        run: |
+          yarn install
+          yarn prod
+          cat public/mix-manifest.json # See asset versions in log
       - name: Upload build files
         uses: actions/upload-artifact@v1
         with:
           name: assets
           path: public
+      - name:
   test-php:
     name: Test/Lint PHP
     runs-on: ubuntu-latest
@@ -30,11 +34,13 @@ jobs:
           extensions: mbstring, bcmath # Setup any required extensions for tests
       - name: Composer install
         run: composer install
+      - name: Run Tests
+        run: ./vendor/bin/phpunit
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [build-js, test-php]
-    if: github.ref == 'refs/heads/development'
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v1
       - name: Download build assets
