--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -2,7 +2,7 @@ name: CI-CD
 
 on:
   push:
-    branches: main
+    branches: development
 
 jobs:
   build-js:
@@ -20,7 +20,8 @@ jobs:
         with:
           name: assets
           path: public
-      - name:
+      - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
   test-php:
     name: Test/Lint PHP
     runs-on: ubuntu-latest
@@ -40,7 +41,7 @@ jobs:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [build-js, test-php]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v1
       - name: Download build assets
