--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -9,12 +9,15 @@ jobs:
     name: Build Js/Css
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Directory Permissions
-      run: sudo chmod -R 777 storage bootstrap/cache
-    - name: Upload build files
-      uses: actions/upload-artifact@v1
-      with:
+      - uses: actions/checkout@v1
+      - name: Yarn Build
+        run: |
+          yarn install
+          yarn prod
+          cat public/mix-manifest.json # See asset versions in log
+      - name: Upload build files
+        uses: actions/upload-artifact@v1
+        with:
           name: assets
           path: public
   test-php:
@@ -26,10 +29,12 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v1
         with:
-          php-version: 7.3 # Use your PHP version
+          php-version: 7.4 # Use your PHP version
           extensions: mbstring, bcmath # Setup any required extensions for tests
       - name: Composer install
         run: composer install
+      - name: Run Tests
+        run: ./vendor/bin/phpunit
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
@@ -45,7 +50,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@master
         with:
-          php-version: 7.3
+          php-version: 7.4
           extension-csv: mbstring, bcmath
       - name: Composer install
         run: composer install
